# verifacta

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  railway.json
langgraph_agent/: agent.py  api.py  claim_card.py  claim_store.py  config.py  logging_setup.py  observability.py  prompts.py  pyproject.toml
langgraph_agent/templates/: claim_card.html  rejection_card.html
mcp_server/: config.py  http_client.py  pyproject.toml  server.py  validators.py
web/: .env.example  mdx-components.tsx  middleware.ts  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/(docs)/: DocsNav.tsx  layout.tsx
web/app/(docs)/architecture/: page.mdx
web/app/(docs)/methodology/: page.mdx
web/app/(docs)/security/: page.mdx
web/app/(docs)/sustainability/: page.mdx
web/app/(docs)/timeline/: page.mdx
web/app/(docs)/user-guide/: page.mdx
web/app/c/[hash]/: not-found.tsx  page.tsx
web/app/chat/: page.tsx
web/app/components/: Answer.tsx  ChatWindow.tsx  ClaimCard.tsx  CopyButton.tsx  ExampleChat.tsx  ExampleQueries.tsx  Header.tsx  HowItWorks.tsx  Icons.tsx  IndicatorExplainer.tsx  KnowledgeBase.tsx  Logo.tsx  MermaidDiagram.tsx  SearchInput.tsx  ThemesSection.tsx  ToolCall.tsx  Tooltip.tsx  Typewriter.tsx  UseCaseCard.tsx  VerificationProgress.tsx
web/app/lib/: numbers.ts  sse.ts  tool-labels.ts  types.ts
